--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,9 +1,12 @@
+if (CMAKE_Fortran_COMPILER_ID)
+    set(ITERATIVESOLVER_FORTRAN_FILES "IterativeSolverF.F90")
+endif ()
 add_library(${PROJECT_NAME} STATIC
         SimpleVector.h
         PagedVector.h
         OpaqueVector.h
         IterativeSolver.cpp IterativeSolver.h
-        IterativeSolverF.F90
+        ${ITERATIVESOLVER_FORTRAN_FILES}
         )
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
 ### For including C++ headers
