--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ cmake_minimum_required(VERSION 3.11)
 project(IterativeSolver LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 14)
 
-include(CMakeDependentOption)
-cmake_dependent_option(ITERATIVESOLVER_FORTRAN "Whether to build fortran binding" ON
-        NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR OFF)
+if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+    option(ITERATIVESOLVER_FORTRAN "Whether to build fortran binding" ON)
+endif ()
 if (ITERATIVESOLVER_FORTRAN)
     enable_language(Fortran)
 endif ()
@@ -24,9 +24,9 @@ endif (NOT MPI_FOUND)
 if (MPI_CXX_FOUND)
     include_directories(${MPI_CXX_INCLUDE_PATH})
     add_definitions(-DHAVE_MPI_H)
-    message("MPI build of ${CMAKE_CURRENT_SOURCE_DIR} for ${CMAKE_PROJECT_NAME} with CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
+    message("MPI build of ${CMAKE_CURRENT_SOURCE_DIR} for ${CMAKE_PROJECT_NAME} with CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} Fortran=${CMAKE_Fortran_COMPILER}")
 else ()
-    message("Serial build of ${CMAKE_CURRENT_SOURCE_DIR} for ${CMAKE_PROJECT_NAME} with CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
+    message("Serial build of ${CMAKE_CURRENT_SOURCE_DIR} for ${CMAKE_PROJECT_NAME} with CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} Fortran=${CMAKE_Fortran_COMPILER}")
 endif (MPI_CXX_FOUND)
 
 include(CheckCXXCompilerFlag)
