--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,13 @@
-foreach (t IterativeSolver-test PagedVector-test SimpleVector-test)
-    add_executable(${t} ${t}.cpp)
-    target_link_libraries(${t} ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
-    set_target_properties(${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
-    if (MPI_FOUND)
-        add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${PROJECT_BINARY_DIR}/${t})
-    else (MPI_FOUND)
-        add_test(${t} ${PROJECT_BINARY_DIR}/${t})
-    endif (MPI_FOUND)
-endforeach ()
+#foreach (t IterativeSolver-test)
+#    add_executable(${t} ${t}.cpp)
+#    target_link_libraries(${t} ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
+#    set_target_properties(${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
+#    if (MPI_FOUND)
+#        add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${PROJECT_BINARY_DIR}/${t})
+#    else (MPI_FOUND)
+#        add_test(${t} ${PROJECT_BINARY_DIR}/${t})
+#    endif (MPI_FOUND)
+#endforeach ()
 
 include(FetchContent)
 FetchContent_Declare(
@@ -22,8 +22,15 @@ if (NOT googletest_dep_POPULATED)
 endif ()
 
 
-add_executable(test.exe TestIterativeSolver.cpp)
-target_link_libraries(test.exe PUBLIC ${PROJECT_NAME} gmock_main)
-
 include(GoogleTest)
-gtest_discover_tests(test.exe)
+foreach (t TestIterativeSolver PagedVector-test SimpleVector-test)
+    add_executable(${t}.exe ${t}.cpp test.h)
+    target_link_libraries(${t}.exe PUBLIC ${PROJECT_NAME} gmock_main)
+    gtest_discover_tests(${t}.exe)
+    if (MPI_FOUND)
+        message("parallel test ${t}")
+        add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${t}.exe)
+    else (MPI_FOUND)
+        add_test(${t} ${t}.exe)
+    endif (MPI_FOUND)
+endforeach ()
