--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,10 +25,9 @@ endif ()
 include(GoogleTest)
 foreach (t TestIterativeSolver PagedVector-test SimpleVector-test)
     add_executable(${t}.exe ${t}.cpp test.h)
-    target_link_libraries(${t}.exe PUBLIC ${PROJECT_NAME} gmock_main)
+    target_link_libraries(${t}.exe PUBLIC ${PROJECT_NAME} gmock_main ${MPI_CXX_LIBRARIES})
     gtest_discover_tests(${t}.exe)
     if (MPI_FOUND)
-        message("parallel test ${t}")
         add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${t}.exe)
     else (MPI_FOUND)
         add_test(${t} ${t}.exe)
