memory error fixed

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,13 @@
-#foreach (t IterativeSolver-test)
-#    add_executable(${t} ${t}.cpp)
-#    target_link_libraries(${t} ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
-#    set_target_properties(${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
-#    if (MPI_FOUND)
-#        add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${PROJECT_BINARY_DIR}/${t})
-#    else (MPI_FOUND)
-#        add_test(${t} ${PROJECT_BINARY_DIR}/${t})
-#    endif (MPI_FOUND)
-#endforeach ()
+foreach (t IterativeSolver-test)
+    add_executable(${t} ${t}.cpp)
+    target_link_libraries(${t} ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
+    set_target_properties(${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
+    if (MPI_FOUND)
+        add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${PROJECT_BINARY_DIR}/${t})
+    else (MPI_FOUND)
+        add_test(${t} ${PROJECT_BINARY_DIR}/${t})
+    endif (MPI_FOUND)
+endforeach ()
 
 include(FetchContent)
 FetchContent_Declare(
