--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 3.11)
 
-project(IterativeSolver LANGUAGES CXX)
-set(CMAKE_CXX_STANDARD 14)
+project(IterativeSolver LANGUAGES CXX VERSION 1.0)
+string(TOUPPER ${PROJECT_NAME} PROJECT_UPPER_NAME)
 
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
-    option(ITERATIVESOLVER_FORTRAN "Whether to build fortran binding" ON)
+    option(${PROJECT_UPPER_NAME}_FORTRAN "Whether to build fortran binding" ON)
+    option(${PROJECT_UPPER_NAME}_I8 "Whether to build for 64-bit fortran integers" ON)
 endif ()
-if (ITERATIVESOLVER_FORTRAN)
+if (${PROJECT_UPPER_NAME}_FORTRAN)
     enable_language(Fortran)
 endif ()
 
@@ -23,7 +24,7 @@ endif (NOT MPI_FOUND)
 
 if (MPI_CXX_FOUND)
     include_directories(${MPI_CXX_INCLUDE_PATH})
-    add_definitions(-DHAVE_MPI_H)
+    set(HAVE_MPI_H ON)
     message("MPI build of ${CMAKE_CURRENT_SOURCE_DIR} for ${CMAKE_PROJECT_NAME} with CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} Fortran=${CMAKE_Fortran_COMPILER}")
 else ()
     message("Serial build of ${CMAKE_CURRENT_SOURCE_DIR} for ${CMAKE_PROJECT_NAME} with CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} Fortran=${CMAKE_Fortran_COMPILER}")
@@ -35,19 +36,21 @@ if (_Wall)
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
 endif ()
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
-    add_definitions(-DEIGEN_DONT_VECTORIZE)
+    set(EIGEN_DONT_VECTORIZE ON)
 endif ()
 
 if (CMAKE_Fortran_COMPILER_ID)
     message("Configuring Fortran support for ${CMAKE_CURRENT_SOURCE_DIR}")
     include(CheckFortranCompilerFlag)
-    foreach (f "-fdefault-integer-8" "-i8")
-        CHECK_Fortran_COMPILER_FLAG(${f} _fortran_flags)
-        if (_fortran_flags)
-            set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${f}")
-        endif ()
-        unset(_fortran_flags CACHE)
-    endforeach ()
+    if (${PROJECT_UPPER_NAME}_I8)
+        foreach (f "-fdefault-integer-8" "-i8")
+            CHECK_Fortran_COMPILER_FLAG(${f} _fortran_flags)
+            if (_fortran_flags)
+                set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${f}")
+            endif ()
+            unset(_fortran_flags CACHE)
+        endforeach ()
+    endif ()
     CHECK_Fortran_COMPILER_FLAG("-Wall" _Wallf)
     if (_Wallf)
         set(CMAKE_Fortran_FLAGS_DEBUG "${CMAKE_Fortran_FLAGS_DEBUG} -Wall")
