--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,11 @@ string(TOUPPER ${PROJECT_NAME} PROJECT_UPPER_NAME)
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     option(${PROJECT_UPPER_NAME}_FORTRAN "Whether to build fortran binding" ON)
     option(${PROJECT_UPPER_NAME}_I8 "Whether to build for 64-bit fortran integers" ON)
+    option(MOLPRO "Whether to build for the Molpro environment" OFF)
+    if (MOLPRO)
+        set(${PROJECT_UPPER_NAME}_FORTRAN 1)
+    endif ()
+
 endif ()
 if (${PROJECT_UPPER_NAME}_FORTRAN)
     enable_language(Fortran)
