Another try on ppidd dependency

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,6 +1,7 @@
+include(FetchContent)
 file(STRINGS "ppidd_SHA1" ppidd_GIT_TAG)
-    FetchContent_Declare(
-            ppidd_dep
-            GIT_REPOSITORY https://bitbucket.org/pjknowles/ppidd
-            GIT_TAG ${ppidd_GIT_TAG}
-    )
+FetchContent_Declare(
+        ppidd_dep
+        GIT_REPOSITORY https://bitbucket.org/pjknowles/ppidd
+        GIT_TAG ${ppidd_GIT_TAG}
+)
