--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -12,9 +12,11 @@ endif ()
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
 if (Molpro_SOURCE_DIR)
-    if (NOT ppidd_dep_POPULATED)
-        FetchContent_Populate(ppidd_dep)
-        add_subdirectory(${ppidd_dep_SOURCE_DIR} ${ppidd_dep_BINARY_DIR} EXCLUDE_FROM_ALL)
+    if (NOT TARGET ppidd::ppidd)
+        if (NOT ppidd_dep_POPULATED)
+            FetchContent_Populate(ppidd_dep)
+            add_subdirectory(${ppidd_dep_SOURCE_DIR} ${ppidd_dep_BINARY_DIR} EXCLUDE_FROM_ALL)
+        endif ()
     endif ()
     list(APPEND DEPENDENCIES ppidd)
     set(DEPENDENCY_ppidd 1.0)
