Another try on ppidd dependency

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -20,6 +20,7 @@ if (Molpro_SOURCE_DIR)
     endif ()
     list(APPEND DEPENDENCIES ppidd)
     set(DEPENDENCY_ppidd 1.0)
+    target_link_libraries(${PROJECT_NAME} PRIVATE ppidd::ppidd)
 endif ()
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "SimpleVector.h;PagedVector.h;OpaqueVector.h;IterativeSolver.h;${CMAKE_CURRENT_BINARY_DIR}/IterativeSolver-config.h")
