Do not redefine MOLPRO symbol

--- a/lib/IterativeSolver-config.h.in
+++ b/lib/IterativeSolver-config.h.in
@@ -4,5 +4,7 @@
 #cmakedefine ITERATIVESOLVER_I8
 #cmakedefine HAVE_MPI_H
 #cmakedefine EIGEN_DONT_VECTORIZE
+#ifndef MOLPRO
 #cmakedefine MOLPRO
+#endif
 #endif
