--- a/lib/IterativeSolver-config.h.in
+++ b/lib/IterativeSolver-config.h.in
@@ -2,7 +2,9 @@
 #define ITERATIVESOLVER_CONFIG_H
 #cmakedefine ITERATIVESOLVER_FORTRAN
 #cmakedefine ITERATIVESOLVER_I8
+#ifndef HAVE_MPI_H
 #cmakedefine HAVE_MPI_H
+#endif
 #cmakedefine EIGEN_DONT_VECTORIZE
 #ifndef MOLPRO
 #cmakedefine MOLPRO
