--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -11,13 +11,31 @@ if (FORTRAN)
 endif ()
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
-if (Molpro_SOURCE_DIR)
-    if (NOT TARGET ppidd::ppidd)
-        if (NOT ppidd_dep_POPULATED)
-            FetchContent_Populate(ppidd_dep)
-            add_subdirectory(${ppidd_dep_SOURCE_DIR} ${ppidd_dep_BINARY_DIR} EXCLUDE_FROM_ALL)
-        endif ()
+
+set(DEPENDENCY_Eigen3::Eigen 3.3.0)
+if (NOT TARGET Eigen3::Eigen)
+    get_dependency_name("eigen3")
+    FetchContent_GetProperties(${_dependency_name})
+    if (NOT ${_dependency_name}_POPULATED)
+        find_package(Eigen3 3.3.0 NO_MODULE)
     endif ()
+    if (NOT TARGET Eigen3::Eigen)
+        get_dependency(eigen3 NO)
+        add_library(eigen INTERFACE)
+        target_include_directories(eigen INTERFACE
+                $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/dependencies/Eigen3>
+                $<INSTALL_INTERFACE:include>
+                )
+        add_library(Eigen3::Eigen ALIAS eigen)
+        list(APPEND DEPENDENCIES eigen)
+        message(STATUS "IterativeSolver: Eigen3 library obtained externally")
+    endif ()
+else ()
+    message(STATUS "IterativeSolver: Eigen3::Eigen target already defined")
+endif ()
+
+if (Molpro_SOURCE_DIR)
+    get_dependency_name(ppidd)
     list(APPEND DEPENDENCIES ppidd)
     set(DEPENDENCY_ppidd 1.0)
     target_link_libraries(${PROJECT_NAME} PRIVATE ppidd::ppidd)
