--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,4 +1,4 @@
-declare_dependency(ppidd https://bitbucket.org/pjknowles/ppidd)
+declare_dependency(ppidd https://gitlab.com/molpro/ppidd.git)
 declare_dependency(googletest https://github.com/google/googletest.git)
 declare_dependency(eigen3 https://github.com/eigenteam/eigen-git-mirror.git)
 
