--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -35,10 +35,21 @@ else ()
 endif ()
 
 if (Molpro_SOURCE_DIR)
-    get_dependency_name(ppidd)
+message(STATUS "IterativeSolver Molpro configuration")
+    get_dependency(ppidd)
+if (TARGET ppidd::ppidd)
+message(STATUS "ppidd::ppidd is a target")
+else()
+message(STATUS "ppidd::ppidd is not a target")
+endif()
+if (TARGET ppidd)
+message(STATUS "ppidd is a target")
+else()
+message(STATUS "ppidd is not a target")
+endif()
     list(APPEND DEPENDENCIES ppidd)
     set(DEPENDENCY_ppidd 1.0)
-    target_link_libraries(${PROJECT_NAME} PRIVATE ppidd::ppidd)
+    target_link_libraries(${PROJECT_NAME} PUBLIC ppidd::ppidd)
 endif ()
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "SimpleVector.h;PagedVector.h;OpaqueVector.h;IterativeSolver.h;${CMAKE_CURRENT_BINARY_DIR}/IterativeSolver-config.h")
