cmake: simplified eigen discovery

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -14,33 +14,52 @@ target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
 
 if (NOT TARGET Eigen3::Eigen)
     message(STATUS "Eigen3::Eigen is not yet a target")
-        find_package(Eigen3 3.3.0 NO_MODULE)
-        if (NOT TARGET Eigen3::Eigen)
-    message(STATUS "Eigen3::Eigen is still not yet a target")
-    get_dependency(eigen3)
-    #    get_dependency_name("eigen3")
-    foreach (t eigen eigen3 Eigen3::Eigen)
-        if (TARGET ${t})
-            message(STATUS "after get_dependency ${t} is a target")
-        else ()
-            message(STATUS "after get_dependency ${t} is not a target")
-        endif ()
-    endforeach ()
-    #    FetchContent_GetProperties(${_dependency_name})
-    #    message(STATUS "after GetProperties ${${_dependency_name}_POPULATED}")
-    #    if (NOT ${_dependency_name}_POPULATED)
-    #        message(STATUS "do find_package")
-    #    endif ()
-    #        get_dependency(eigen3 OFF)
-    #        add_library(eigen INTERFACE)
-    #        target_include_directories(eigen INTERFACE
-    #                $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/dependencies/Eigen3>
-    #                $<INSTALL_INTERFACE:include>
-    #                )
-            add_library(Eigen3::Eigen ALIAS eigen)
-    list(APPEND DEPENDENCIES eigen)
-    #        message(STATUS "IterativeSolver: Eigen3 library obtained externally")
-        endif ()
+    find_package(Eigen3 3.3.0 NO_MODULE NO_CMAKE_ENVIRONMENT_PATH NO_CMAKE_PACKAGE_REGISTRY QUIET)
+    if (EIGEN3_FOUND)
+        message(STATUS "Eigen3 found on system: ${EIGEN3_INCLUDE_DIR}")
+        add_library(eigen INTERFACE)
+        target_include_directories(eigen INTERFACE
+                $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
+                #                            $<INSTALL_INTERFACE:include>
+                $<INSTALL_INTERFACE:${EIGEN3_INCLUDE_DIR}>
+                )
+        add_library(Eigen3::Eigen ALIAS eigen)
+    else ()
+        message(STATUS "Eigen3::Eigen not found on system")
+            if(OFF)
+                get_dependency(eigen3)
+                else()
+        get_dependency(eigen3 OFF)
+            get_dependency_name("eigen3")
+#        foreach (t eigen eigen3 Eigen3::Eigen)
+#            if (TARGET ${t})
+#                message(STATUS "after get_dependency ${t} is a target")
+#            else ()
+#                message(STATUS "after get_dependency ${t} is not a target")
+#            endif ()
+#        endforeach ()
+            FetchContent_GetProperties(${_dependency_name})
+        #    message(STATUS "after GetProperties ${${_dependency_name}_POPULATED}")
+        #    if (NOT ${_dependency_name}_POPULATED)
+        #        message(STATUS "do find_package")
+        #    endif ()
+        #        get_dependency(eigen3 OFF)
+                add_library(eigen INTERFACE)
+                target_include_directories(eigen INTERFACE
+                        $<BUILD_INTERFACE:${${_dependency_name}_SOURCE_DIR}>
+                        $<INSTALL_INTERFACE:include>
+                        )
+        install(TARGETS eigen EXPORT ${PROJECT_NAME}Targets LIBRARY DESTINATION lib
+                ARCHIVE DESTINATION lib
+                RUNTIME DESTINATION bin
+                INCLUDES DESTINATION include
+                PUBLIC_HEADER DESTINATION include
+                )
+            endif()
+        add_library(Eigen3::Eigen ALIAS eigen)
+#        list(APPEND DEPENDENCIES eigen)
+        #        message(STATUS "IterativeSolver: Eigen3 library obtained externally")
+    endif ()
 else ()
     message(STATUS "IterativeSolver: Eigen3::Eigen target already defined")
 endif ()
@@ -48,12 +67,12 @@ set(DEPENDENCY_Eigen3::Eigen 3.3.0)
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
 
 if (Molpro_SOURCE_DIR)
-message(STATUS "IterativeSolver Molpro configuration")
+    message(STATUS "IterativeSolver Molpro configuration")
     get_dependency(ppidd)
-if (TARGET ppidd::ppidd)
-message(STATUS "ppidd::ppidd is a target")
-else()
-message(STATUS "ppidd::ppidd is not a target")
+    if (TARGET ppidd::ppidd)
+        message(STATUS "ppidd::ppidd is a target")
+    else ()
+        message(STATUS "ppidd::ppidd is not a target")
 endif()
 if (TARGET ppidd)
 message(STATUS "ppidd is a target")
