--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -20,49 +20,32 @@ if (NOT TARGET Eigen3::Eigen)
         add_library(eigen INTERFACE)
         target_include_directories(eigen INTERFACE
                 $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
-                #                            $<INSTALL_INTERFACE:include>
                 $<INSTALL_INTERFACE:${EIGEN3_INCLUDE_DIR}>
                 )
         add_library(Eigen3::Eigen ALIAS eigen)
     else ()
-        message(STATUS "Eigen3::Eigen not found on system")
-            if(OFF)
-                get_dependency(eigen3)
-                else()
+        message(STATUS "Eigen3::Eigen not found on system, and downloaded")
         get_dependency(eigen3 OFF)
-            get_dependency_name("eigen3")
-#        foreach (t eigen eigen3 Eigen3::Eigen)
-#            if (TARGET ${t})
-#                message(STATUS "after get_dependency ${t} is a target")
-#            else ()
-#                message(STATUS "after get_dependency ${t} is not a target")
-#            endif ()
-#        endforeach ()
-            FetchContent_GetProperties(${_dependency_name})
-        #    message(STATUS "after GetProperties ${${_dependency_name}_POPULATED}")
-        #    if (NOT ${_dependency_name}_POPULATED)
-        #        message(STATUS "do find_package")
-        #    endif ()
-        #        get_dependency(eigen3 OFF)
-                add_library(eigen INTERFACE)
-                target_include_directories(eigen INTERFACE
-                        $<BUILD_INTERFACE:${${_dependency_name}_SOURCE_DIR}>
-                        $<INSTALL_INTERFACE:include>
-                        )
-        install(TARGETS eigen EXPORT ${PROJECT_NAME}Targets LIBRARY DESTINATION lib
-                ARCHIVE DESTINATION lib
-                RUNTIME DESTINATION bin
-                INCLUDES DESTINATION include
-                PUBLIC_HEADER DESTINATION include
+        get_dependency_name("eigen3")
+        FetchContent_GetProperties(${_dependency_name})
+        add_library(eigen INTERFACE)
+        set(EIGEN3_INCLUDE_DIR ${${_dependency_name}_SOURCE_DIR})
+        target_include_directories(eigen INTERFACE
+                $<BUILD_INTERFACE:${${_dependency_name}_SOURCE_DIR}>
+                $<INSTALL_INTERFACE:include>
                 )
-            endif()
-        add_library(Eigen3::Eigen ALIAS eigen)
-#        list(APPEND DEPENDENCIES eigen)
-        #        message(STATUS "IterativeSolver: Eigen3 library obtained externally")
     endif ()
+    add_library(Eigen3::Eigen ALIAS eigen)
 else ()
     message(STATUS "IterativeSolver: Eigen3::Eigen target already defined")
 endif ()
+get_target_property(incl eigen INTERFACE_INCLUDE_DIRECTORIES)
+install(TARGETS eigen EXPORT ${PROJECT_NAME}Targets LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION include
+        PUBLIC_HEADER DESTINATION include
+        )
 set(DEPENDENCY_Eigen3::Eigen 3.3.0)
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
 
