--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -27,3 +27,14 @@ foreach (fil ${EXAMPLES})
     target_link_libraries(${test_name} PUBLIC ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
     add_test(${nam} ${PROJECT_BINARY_DIR}/${test_name})
 endforeach ()
+
+if (BENCHMARK)
+    add_executable(LinearEigensystemBenchmarkF LinearEigensystemBenchmarkF.F90)
+    set_target_properties(LinearEigensystemBenchmarkF
+            PROPERTIES
+            COMPILE_FLAGS -UHAVE_MPI_H
+            RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}
+            )
+    get_dependency(profiler)
+    target_link_libraries(LinearEigensystemBenchmarkF PUBLIC ${PROJECT_NAME} ${MPI_CXX_LIBRARIES} Profiler::Profiler)
+endif ()
