--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,3 +1,6 @@
+if (BENCHMARK)
+    declare_dependency(profiler https://gitlab.com/molpro/profiler.git)
+ENDIF ()
 declare_dependency(ppidd https://gitlab.com/molpro/ppidd.git)
 declare_dependency(googletest https://github.com/google/googletest.git)
 declare_dependency(eigen3 https://github.com/eigenteam/eigen-git-mirror.git)
